# advent-of-code-rust

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  day10_example.txt  day13_test2.txt  test4.txt
benches/: aoc-bench.rs
src/: day1.rs  day10.rs  day10_2.rs  day11.rs  day11_2.rs  day12.rs  day12_2.rs  day13.rs  day13_2.rs  day14.rs  day14_2.rs  day15.rs  day15_2.rs  day16.rs  day16_2.rs  day17.rs  day17_2.rs  day17_2_less_code.rs  day18.rs  day18_2.rs  day19.rs  day19_2.rs  day1_2.rs  day2.rs  day20.rs  day20_2.rs  day21.rs  day22.rs  day22_2.rs  day23.rs  day24.rs  day25.rs  day2_2.rs  day3.rs  day3_2.rs  day4.rs  day4_2.rs  day4_2_take2.rs  day4_take2.rs  day5.rs  (+12 more)
src/day18/: snailfish.rs
src/day19/: matrices.rs  remap.rs
src/day20/: tile_mapper.rs
src/day23/: burrow.rs
src/day24/: notes.md
