[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["Wilfried Chauveau"]
edition = "2021"

[dependencies]
anyhow = "1.0.0"
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
bimap = "0.6.1"
bitvec = "0.22"
either = "1.6"
itertools = "0.10"
nom = "7"
num = "0.4"
rayon = "1.5.1"
regex = "1.4"

[dev-dependencies]
lazy_static = "1.4"

