[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["Wilfried Chauveau"]
edition = "2021"

[dependencies]
anyhow = "*"
regex = "^1.4"
itertools = "^0"
nom = "^7"
either = "^1.6"
yaah = { version = "0.2.0" }
bitvec = "0.20"
arrayvec = "0.7.2"
priority-queue = "*"
rayon = "*"
cached = "*"
lazy_static = "*"
clap = { version = "4.0", features = ["derive"] }
criterion = "0.4"

[dev-dependencies]
rayon = "*"
lazy_static = "*"

[[bench]]
name = "aoc-bench"
harness = false
