[package]
name = "advent_of_code_2022"
version = "0.1.0"
authors = ["ithinuel <wilfried.chauveau@ithinuel.me>"]
edition = "2021"
repository = "https://github.com/username/advent-of-code-2022"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaah = "0.2.1"
clap = { version = "4.0", features = ["derive"] }
itertools = "0.10.5"
criterion = "0.4"
smallvec = "1.10"
anyhow = "1.0"
priority-queue = "1.3.0"
nom = "7.1.1"
either = "1.8"

[[bench]]
name = "aoc-bench"
harness = false

